--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
          <ul class="site-navigation">
           <li><a href="catalog.html">Каталог</a>
           <ul class="catalog-navigation">
-            <li>Новинки</li>
-            <li><a href="#1">Сливочное</a></li>
-            <li><a href="#2">Щербеты</a></li>
-            <li><a href="#3">Фруктовый лед</a></li>
-            <li><a href="#4">Мелорин</a></li>
+            <li><a href="#1">Новинки</a></li>
+            <li><a href="#2">Сливочное</a></li>
+            <li><a href="#3">Щербеты</a></li>
+            <li><a href="#4">Фруктовый лед</a></li>
+            <li><a href="#5">Мелорин</a></li>
           </ul>
           </li>
           <li><a href="delivery.html">Доставка и оплата</a></li>
@@ -29,13 +29,14 @@
         <ul class="user-navigation">
           <li class="search">
             <img src="img/loupe.svg" width="17" height="17" alt="лупа поиска">
-            <section class="search">
+            <form action="https://echo.htmlacademy.ru" method="post">
               <input type="search" placeholder="Что ищем?" />
-            </section>
+            </form>
           </li>
           <li class="login-link">
+            <a href="entrance.html">
             <img src="img/entrance.svg" width="17" height="17" alt="Вход">
-            <a href="entrance.html">Вход</a>
+            Вход</a>
             <form action="https://echo.htmlacademy.ru" method="post">
               <input type="email" name="login" id="login-field"
               placeholder="Электронная почта" />
@@ -47,8 +48,9 @@
             </form>
           </li>
           <li class="basket">
+            <a href="basket.html">
             <img src="img/basket.svg" width="21" height="20" alt="Пустая корзина">
-            <a href="basket.html">Пусто</a>
+            Пусто</a>
           </li>
         </ul>
          </nav>
@@ -121,31 +123,25 @@
         самого вкусного, что у нас происходит. Обещаем не спамить и не
         слать всякой ненужной ерунды. Честно =)
       </p>
-      <form action="https://echo.htmlacademy.ru" method="post">
-        <h3>Мы обязательно вам ответим!</h3>
-        <input type="text" name="name" id="name-field"
-        placeholder="Как вас зовут?" />
-        <input type="email" name="email" id="email-field"
-        placeholder="Ваша почта для ответа?" />
-        <input type="text" name="comment" id="comment-field"
-        placeholder="Напишите что-нибудь..." />
-        <input type="submit" value="Отправить" />
-      </form>
     </section>
   </main>
   <footer class="main-footer">
     <ul class="footer-social">
       <li class="social-button">
-        <a class="twitter" alt="иконка твиттера"></a>
+        <a class="twitter">
+          <span class="visually hidden">иконка твиттера</span></a>
       </li>
       <li class="social-button">
-        <a class="instagram" alt="Instagram" />
+        <a class="instagram">
+        <span class="visually hidden">Instagram</span></a>
       </li>
       <li class="social-button">
-        <a class="facebook" alt="Facebook" />
+        <a class="facebook" alt="Facebook">
+          <span class="visually hidden">Facebook</span></a>
       </li>
       <li class="social-button">
-        <a class="vk" alt="VK" />
+        <a class="vk" alt="VK">
+          <span class="visually hidden">ВКонтакте</span></a>
       </li>
     </ul>
     <ul class="about">
@@ -167,6 +163,18 @@
       </p>
     </div>
   </footer>
+  <form action="https://echo.htmlacademy.ru" method="post">
+    <h3>Мы обязательно вам ответим!</h3>
+    <img src="img/cross-big.svg" width="18" height="17" alt="закрыть"/>
+    <input type="text" name="name" id="name-field"
+    placeholder="Как вас зовут?" />
+    <input type="email" name="email" id="email-field"
+    placeholder="Ваша почта для ответа?" />
+    <textarea>
+      Напишите что-нибудь...
+    </textarea>
+    <input type="submit" value="Отправить" />
+  </form>
 </body>
 
 </html>
