--- a/catalog.html
+++ b/catalog.html
@@ -55,7 +55,9 @@
           <table>
             <tr class="row1">
               <td style="">
-                <img src="img/cross-small.svg" width="11" height="11" alt="закрыть" />
+                <button>
+                <!-- крестик. закрытие окна -->
+                </button>
               </td>
               <td>
                 <img src="img/ice-mini-1.jpg" width="33" height="33"
@@ -67,7 +69,9 @@
             </tr>
             <tr class="row2">
               <td style="">
-                <img src="img/cross-small.svg" width="11" height="11" alt="закрыть" />
+                <button>
+                <!-- крестик. закрытие окна -->
+                </button>
               </td>
               <td>
                 <img src="img/ice-mini-2.jpg" width="33" height="33"
@@ -243,7 +247,7 @@
     </ul>
     <ul class="about">
       <li><a class="about-link" href="supplier.html">
-          <img src="img/heart.svg" width="15" height="13" alt="сердечко" />
+          <!-- иконка сердечка -->
           Для поставщиков</a></li>
       <li><a class="about-link" href="aboutus.html">О производстве</a></li>
       <li><a class="about-link" href="docs.html">Наши документы</a></li>
@@ -263,3 +267,15 @@
 </body>
 
 </html>
+<!--
+<ul class="slide-switches">
+  <li class="slide-radio">
+    <button class="slide-btn">Первый слайд</button>
+  </li>
+  <li class="slide-radio">
+    <button class="slide-btn">Второй слайд</button>
+  </li>
+  <li class="slide-radio">
+    <button class="slide-btn">Третий слайд</button>
+  </li>
+</ul> -->
