--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 <body>
   <header class="main-header">
-       <nav class="main-navigation">
-         <a class="main-header-logo">
-           <img src="img/logo.svg" width="154" height="64" alt="Логотип Gllacy Shop">
-         </a>
-         <ul class="site-navigation">
-          <li><a href="catalog.html">Каталог</a>
+    <nav class="main-navigation">
+      <a class="main-header-logo">
+        <img src="img/logo.svg" width="154" height="64" alt="Логотип Gllacy Shop">
+      </a>
+      <ul class="site-navigation">
+        <li><a href="catalog.html">Каталог</a>
           <ul class="catalog-navigation">
             <li><a href="#1">Новинки</a></li>
             <li><a href="#2">Сливочное</a></li>
@@ -22,47 +22,45 @@
             <li><a href="#4">Фруктовый лед</a></li>
             <li><a href="#5">Мелорин</a></li>
           </ul>
-          </li>
-          <li><a href="delivery.html">Доставка и оплата</a></li>
-          <li><a href="about.html">О Компании</a></li>
-        </ul>
-        <ul class="user-navigation">
-          <li class="search">
-            <img src="img/loupe.svg" width="17" height="17" alt="лупа поиска">
-            <form action="https://echo.htmlacademy.ru" method="post">
-              <input type="search" placeholder="Что ищем?" />
-            </form>
-          </li>
-          <li class="login-link">
-            <a href="entrance.html">
+        </li>
+        <li><a href="delivery.html">Доставка и оплата</a></li>
+        <li><a href="about.html">О Компании</a></li>
+      </ul>
+      <ul class="user-navigation">
+        <li class="search">
+          <!-- иконка лупы поиска -->
+          <form action="https://echo.htmlacademy.ru" method="post">
+            <input type="search" placeholder="Что ищем?" />
+          </form>
+        </li>
+        <li class="login-link">
+          <a href="entrance.html">
             <img src="img/entrance.svg" width="17" height="17" alt="Вход">
             Вход</a>
-            <form action="https://echo.htmlacademy.ru" method="post">
-              <input type="email" name="login" id="login-field"
-              placeholder="Электронная почта" />
-              <input type="password" name="password" id="password-field"
-              placeholder="Пароль" />
-              <input type="submit" value="Войти" />
-              <a href="#">Забыли пароль?</a>
-              <a href="#">Новая регистрация</a>
-            </form>
-          </li>
-          <li class="basket">
-            <a href="basket.html">
-            <img src="img/basket.svg" width="21" height="20" alt="Пустая корзина">
+          <form action="https://echo.htmlacademy.ru" method="post">
+            <input type="email" name="login" id="login-field" placeholder="Электронная почта" />
+            <input type="password" name="password" id="password-field" placeholder="Пароль" />
+            <input type="submit" value="Войти" />
+            <a href="#">Забыли пароль?</a>
+            <a href="#">Новая регистрация</a>
+          </form>
+        </li>
+        <li class="basket">
+          <a href="basket.html">
+            <!-- иконка корзины -->
             Пусто</a>
-          </li>
-        </ul>
-         </nav>
-         <section class="timeandphone">
-           <p class="time">
-             С 10 до 20, ежедневно
-           </p>
-           <p class="phone">
-             8 812 450-25-25
-           </p>
-         </section>
-       </header>
+        </li>
+      </ul>
+    </nav>
+    <section class="timeandphone">
+      <p class="time">
+        С 10 до 20, ежедневно
+      </p>
+      <p class="phone">
+        8 812 450-25-25
+      </p>
+    </section>
+  </header>
 
 
   <main class="container">
@@ -123,6 +121,10 @@
         самого вкусного, что у нас происходит. Обещаем не спамить и не
         слать всякой ненужной ерунды. Честно =)
       </p>
+      <form action="https://echo.htmlacademy.ru" method="post">
+        <input type="email" id="email-subscribe" name="email-subscribe" placeholder="Электронная почта" />
+        <input type="submit" value="Отправить" />
+      </form>
     </section>
   </main>
   <footer class="main-footer">
@@ -133,7 +135,7 @@
       </li>
       <li class="social-button">
         <a class="instagram">
-        <span class="visually hidden">Instagram</span></a>
+          <span class="visually hidden">Instagram</span></a>
       </li>
       <li class="social-button">
         <a class="facebook" alt="Facebook">
@@ -146,7 +148,7 @@
     </ul>
     <ul class="about">
       <li><a class="about-link" href="supplier.html">
-          <img src="img/heart.svg" width="15" height="13" alt="сердечко" />
+          <!-- иконка сердечка -->
           Для поставщиков</a></li>
       <li><a class="about-link" href="aboutus.html">О производстве</a></li>
       <li><a class="about-link" href="docs.html">Наши документы</a></li>
@@ -163,18 +165,21 @@
       </p>
     </div>
   </footer>
-  <form action="https://echo.htmlacademy.ru" method="post">
-    <h3>Мы обязательно вам ответим!</h3>
-    <img src="img/cross-big.svg" width="18" height="17" alt="закрыть"/>
-    <input type="text" name="name" id="name-field"
-    placeholder="Как вас зовут?" />
-    <input type="email" name="email" id="email-field"
-    placeholder="Ваша почта для ответа?" />
-    <textarea>
+  <div class="popup">
+    <form action="https://echo.htmlacademy.ru" method="post">
+      <h3>Мы обязательно вам ответим!</h3>
+      <button class="close">
+        <img src="img/cross-big.svg" width="18" height="17" alt="закрыть" />
+      </button>
+      <img src="img/cross-big.svg" width="18" height="17" alt="закрыть" />
+      <input type="text" name="name" id="name-field" placeholder="Как вас зовут?" />
+      <input type="email" name="email" id="email-field" placeholder="Ваша почта для ответа?" />
+      <textarea>
       Напишите что-нибудь...
     </textarea>
-    <input type="submit" value="Отправить" />
-  </form>
+      <input type="submit" value="Отправить" />
+    </form>
+  </div>
 </body>
 
 </html>
